--- a/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/_GridViewPartial_retenciones.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Contabilidad/Views/ATS/_GridViewPartial_retenciones.cshtml
@@ -10,7 +10,7 @@
 
         settings.SettingsContextMenu.Enabled = true;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
-
+        settings.Settings.ShowFilterRow = true;
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
         settings.SettingsBehavior.AllowSelectByRowClick = true;
@@ -18,6 +18,13 @@
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
+
+
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
+
+
 
         settings.Columns.Add("denopr", "Proveedor").Width = Unit.Percentage(25);
         settings.Columns.Add("co_serie", "Est-ptoemi").Width = Unit.Percentage(10);
