--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/_GridViewPartial_CatalogoTipo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/CatalogoTipoRRHH/_GridViewPartial_CatalogoTipo.cshtml
@@ -84,7 +84,7 @@
         settings.Columns.Add("ca_estado","Estado").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
-            column.Caption = "Catalogo";
+            column.Caption = "Catálogo";
             column.Width = Unit.Pixel(100);
             column.SetDataItemTemplateContent(container =>
             {
