--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Periodo/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Periodo/Modificar.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_periodo_Info
 
 @{
-    ViewBag.Title = "Modificar Periodo";
+    ViewBag.Title = "Modificar periodo";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
