--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Area/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Area/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_area_Info
 
 @{
-    ViewBag.Title = "Areas";
+    ViewBag.Title = "Áreas";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
