--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Periodo/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Periodo/Anular.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.Erp.Info.RRHH.ro_periodo_Info
 
 @{
-    ViewBag.Title = "Anular périodo";
+    ViewBag.Title = "Anular periodo";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
