--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Periodo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Periodo/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.RRHH.ro_periodo_Info
 @{
-    ViewBag.Title = "Nuevo Periodo";
+    ViewBag.Title = "Nuevo periodo";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
