--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/GastosImportacion/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/GastosImportacion/Anular.cshtml
@@ -9,7 +9,17 @@
 }
 @using (Html.BeginForm("Anular", "GastosImportacion", FormMethod.Post, new { @class = "form", @role = "form" }))
 {@Html.HiddenFor(q => q.IdGasto_tipo)
-
+<div class="row">
+    <div class="col-md-12">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label for="info_gasto_cta.IdCtaCble">Cuenta contable</label>
+                @Html.Partial("_CmbCuenta_Gasto", Model)
+                @Html.ValidationMessageFor(q => q.info_gasto_cta.IdCtaCble, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="col-md-12">
         <div class="col-md-12">
@@ -17,16 +27,6 @@
                 <label for="gt_descripcion">Descripción</label>
                 @Html.TextBoxFor(q => q.gt_descripcion, new { @class = "form-control" })
                 @Html.ValidationMessageFor(m => m.gt_descripcion, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-</div> <div class="row">
-    <div class="col-md-12">
-        <div class="col-md-12">
-            <div class="form-group">
-                <label for="observacion">Observación</label>
-                @Html.TextBoxFor(q => q.observacion, new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.observacion, "", new { @class = "text-danger" })
             </div>
         </div>
     </div>
