--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/GastosImportacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/GastosImportacion/Nuevo.cshtml
@@ -21,7 +21,17 @@
             </div>
         </div>
         </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="gt_descripcion">Descripción</label>
+                    @Html.TextBoxFor(q => q.gt_descripcion, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(m => m.gt_descripcion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <div class="box-footer">
