--- a/ERP/Core.Erp.Web/Areas/Importacion/Views/GastosImportacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Importacion/Views/GastosImportacion/Nuevo.cshtml
@@ -14,7 +14,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="info_gasto_cta.IdCtaCble">Cuenta contable</label>
+                    <label for="info_gasto_cta.IdCtaCble">Cuenta contable*</label>
                     @Html.Partial("_CmbCuenta_Gasto", Model)
                     @Html.ValidationMessageFor(q => q.info_gasto_cta.IdCtaCble, "", new { @class = "text-danger" })
                 </div>
@@ -25,7 +25,7 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="gt_descripcion">Descripción</label>
+                    <label for="gt_descripcion">Descripción*</label>
                     @Html.TextBoxFor(q => q.gt_descripcion, new { @class = "form-control" })
                     @Html.ValidationMessageFor(m => m.gt_descripcion, "", new { @class = "text-danger" })
                 </div>
