--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_ConciliacionBanco_x_cruzar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_ConciliacionBanco_x_cruzar.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_ConciliacionBanco_x_cruzar";
-        settings.CallbackRouteValues = new { Controller = "DepositoBanco", Action = "GridViewPartial_ConciliacionBanco_x_cruzar" };
+        settings.CallbackRouteValues = new { Controller = "ConciliacionBanco", Action = "GridViewPartial_ConciliacionBanco_x_cruzar" };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdPK";
 
@@ -14,13 +14,12 @@
         settings.Settings.ShowGroupPanel = false;
         settings.Settings.ShowFilterRow = true;
         settings.SettingsBehavior.AllowSelectByRowClick = false;
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ConciliacionBanco", Action = "EditingUpdate", Area = "Banco" };
 
         //Configuración click derecho
         settings.SettingsContextMenu.Enabled = true;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
-        settings.SettingsContextMenu.EnableRowMenu = DefaultBoolean.True;
         settings.SettingsContextMenu.RowMenuItemVisibility.NewRow = false;
+        settings.SettingsContextMenu.RowMenuItemVisibility.EditRow = false;
         settings.SettingsContextMenu.RowMenuItemVisibility.DeleteRow = false;
 
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCells;
@@ -28,28 +27,65 @@
         settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IngEgr";
+            column.Caption = "Tipo";
+            column.Width = Unit.Percentage(20);
+            column.GroupIndex = 0;
+        });
 
-        settings.Columns.Add("mcj_IdCbteCble", "ID").Width = Unit.Percentage(10);
-        settings.Columns.Add("cm_observacion", "Observación").Width = Unit.Percentage(20);
-        settings.Columns.Add(column => {
+        settings.Columns.Add("tc_TipoCbte", "Tipo Cbte.").Width = Unit.Percentage(20);
+        settings.Columns.Add("cb_Cheque", "# Cheque").Width = Unit.Percentage(10);
+        settings.Columns.Add(column =>
+        {
             column.Width = Unit.Percentage(10);
-            column.FieldName = "cm_fecha";
+            column.FieldName = "cb_Fecha";
             column.Caption = "Fecha";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
         });
         settings.Columns.Add(column =>
         {
             column.Width = Unit.Percentage(40);
-            column.FieldName = "pe_nombreCompleto";
-            column.Caption = "Cliente";
+            column.FieldName = "cb_Observacion";
+            column.Caption = "Observación";
         });
         settings.Columns.Add(column =>
         {
             column.Width = Unit.Percentage(10);
-            column.FieldName = "cr_Valor";
-            column.Caption = "Valor aprobado";
+            column.FieldName = "dc_Valor";
+            column.Caption = "Valor";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
         });
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "*";
+            column.FieldName = "IdPK";
+            column.UnboundType = DevExpress.Data.UnboundColumnType.String;
+            column.SetDataItemTemplateContent(c =>
+            {
+                Html.DevExpress().Button(settingsBtn =>
+                {
+                    settingsBtn.Name = "btn" + c.KeyValue;
+                    settingsBtn.Text = "Aprobar";
+                    settingsBtn.ClientSideEvents.Click = "function(s, e) {EditingUpdate('" + c.KeyValue + "');}";
+                }).Render();
+            });
+        });
+        settings.Settings.ShowFooter = true;
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor").DisplayFormat = "Total {0:c2}";
+        settings.GroupSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor").DisplayFormat = "Total conciliado {0:c2}";
+        settings.PreRender = (sender, e) =>
+        {
+            MVCxGridView gridView = (MVCxGridView)sender;
+            gridView.ExpandAll();
+        };
+
+        settings.BeforeGetCallbackResult = (sender, e) =>
+        {
+            MVCxGridView gridView = (MVCxGridView)sender;
+            gridView.ExpandAll();
+        };
     });
 }
 @grid.Bind(Model).GetHtml()
