--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/Nuevo.cshtml
@@ -10,6 +10,119 @@
 
 <script type="text/javascript">
 
+    $(function () {
+        //Date picker
+        $('#co_Fecha').datepicker({
+            autoclose: true
+        })
+        $("#IdBanco").change(function () {
+            GetSaldoContableAnt();
+            CargarMovimientos();
+        });
+        $("#co_SaldoBanco_anterior").change(function () {
+            Calcular();
+        });
+        $("#co_SaldoBanco_EstCta").change(function () {
+            Calcular();
+        });
+        $("#IdPeriodo").change(function () {
+            GetSaldoContableAnt();
+            CargarMovimientos();
+        });
+        GetSaldoContableAnt();
+    });
+
+    function EditingUpdate(ID) {
+        var datos = {
+            IdPk: ID
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("EditingUpdate", "ConciliacionBanco",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+            },
+            error: function (error) {
+            }
+        });
+        GridView_ConciliacionBanco_det.PerformCallback();
+        GridView_ConciliacionBanco_x_cruzar.PerformCallback();
+    }
+
+    function CargarMovimientos() {
+            var datos = {
+                IdBanco: $("#IdBanco").val(),
+                IdPeriodo: $("#IdPeriodo").val()
+            }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("CargarMovimientos", "ConciliacionBanco", new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+            },
+            error: function (error) {
+            }
+        });
+        GridView_ConciliacionBanco_det.PerformCallback();
+        GridView_ConciliacionBanco_x_cruzar.PerformCallback();
+    }
+    function Calcular() {
+        var datos = {
+            co_SaldoContable_MesAnt: $("#co_SaldoContable_MesAnt").val(),
+            co_SaldoBanco_anterior: $("#co_SaldoBanco_anterior").val(),
+            co_SaldoBanco_EstCta: $("#co_SaldoBanco_EstCta").val(),
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("Calcular", "ConciliacionBanco", new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#co_totalIng").val(data.co_totalIng);
+                $("#co_totalEgr").val(data.co_totalEgr);
+                $("#co_SaldoConciliado").val(data.co_SaldoConciliado);
+                $("#co_Diferencia").val(data.co_Diferencia);
+            },
+            error: function (error) {
+            }
+        });
+    }
+         function GetSaldoContableAnt() {
+            var datos = {
+                IdBanco: $("#IdBanco").val(),
+                IdPeriodo: $("#IdPeriodo").val()
+            }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetSaldoContableAnt", "ConciliacionBanco", new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $("#co_SaldoContable_MesAnt").val(data);
+                Calcular();
+            },
+            error: function (error) {
+            }
+        });
+    }
 </script>
 
 @using (Html.BeginForm("Nuevo", "ConciliacionBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
@@ -24,7 +137,6 @@
             </h4>
         </div>
     }
-
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-3">
@@ -44,14 +156,14 @@
             <div class="col-md-offset-4 col-md-2">
                 <div class="form-group">
                     <label for="co_Fecha">Fecha*</label>
-                    @Html.TextBoxFor(q => q.co_Fecha, "{0:dd/MM/yyyy}", new { @id = "Fecha", @class = "form-control" })
+                    @Html.TextBoxFor(q => q.co_Fecha, "{0:dd/MM/yyyy}", new { @id = "co_Fecha", @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.co_Fecha, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
     </div>
 
-     <div class="row">
+    <div class="row">
         <div class="col-md-12">
             <div class="col-md-6">
                 <div class="form-group">
@@ -60,17 +172,89 @@
                     @Html.ValidationMessageFor(q => q.IdBanco, "", new { @class = "text-danger" })
                 </div>
             </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="co_SaldoBanco_anterior">Saldo anterior*</label>
+                    @Html.TextBoxFor(q => q.co_SaldoBanco_anterior, new { @id = "co_SaldoBanco_anterior", @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.co_SaldoBanco_anterior, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="co_SaldoBanco_EstCta">Saldo actual*</label>
+                    @Html.TextBoxFor(q => q.co_SaldoBanco_EstCta, new { @id = "co_SaldoBanco_EstCta", @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.co_SaldoBanco_EstCta, "", new { @class = "text-danger" })
+                </div>
+            </div>
         </div>
     </div>
-
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-12">
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="co_SaldoContable_MesAnt">Saldo contable ant.</label>
+                    @Html.TextBoxFor(q => q.co_SaldoContable_MesAnt, new { @id = "co_SaldoContable_MesAnt", @class = "form-control", @readonly = "readonly" })
+                    @Html.ValidationMessageFor(q => q.co_SaldoContable_MesAnt, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="co_totalIng">Total ingresos*</label>
+                    @Html.TextBoxFor(q => q.co_totalIng, new { @id = "co_totalIng", @class = "form-control", @readonly = "readonly" })
+                    @Html.ValidationMessageFor(q => q.co_totalIng, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="co_totalEgr">Total egresos*</label>
+                    @Html.TextBoxFor(q => q.co_totalEgr, new { @id = "co_totalEgr", @class = "form-control", @readonly = "readonly" })
+                    @Html.ValidationMessageFor(q => q.co_totalEgr, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="co_SaldoConciliado">Total conciliado*</label>
+                    @Html.TextBoxFor(q => q.co_SaldoConciliado, new { @id = "co_SaldoConciliado", @class = "form-control", @readonly = "readonly" })
+                    @Html.ValidationMessageFor(q => q.co_SaldoConciliado, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12"> 
+            <div class="col-md-9">
                 <div class="form-group">
                     <label for="co_Observacion">Observación</label>
                     @Html.TextAreaFor(q => q.co_Observacion, new { @id = "co_Observacion", @class = "form-control", @rows = 1 })
                     @Html.ValidationMessageFor(q => q.co_Observacion, "", new { @class = "text-danger" })
                 </div>
+            </div>
+            <div class="col-md-3">
+                <div class="form-group">
+                    <label for="co_Diferencia">Diferencia*</label>
+                    @Html.TextBoxFor(q => q.co_Diferencia, new { @id = "co_Diferencia", @class = "form-control", @readonly = "readonly" })
+                    @Html.ValidationMessageFor(q => q.co_Diferencia, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+    
+    <div id="Tabs" role="tabpanel">
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="active">
+                <a href="#tab_por_aprobar" aria-controls="vales" role="tab" data-toggle="tab">Por aprobar</a>
+            </li>
+            <li>
+                <a href="#tab_aprobados" aria-controls="vales" role="tab" data-toggle="tab">Aprobados</a>
+            </li>
+        </ul>
+        <div class="tab-content" style="padding-top: 20px">
+            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_por_aprobar">
+                @Html.Action("GridViewPartial_ConciliacionBanco_x_cruzar")
+            </div>
+
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_aprobados">
+                @Html.Action("GridViewPartial_ConciliacionBanco_det")
             </div>
         </div>
     </div>
@@ -83,3 +267,4 @@
         @Scripts.Render("~/bundles/jqueryval")
     }
 }
+
