--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_ConciliacionBanco_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ConciliacionBanco/_GridViewPartial_ConciliacionBanco_det.cshtml
@@ -2,7 +2,7 @@
 @{
     var grid = Html.DevExpress().GridView(settings => {
         settings.Name = "GridView_ConciliacionBanco_det";
-        settings.CallbackRouteValues = new { Controller = "DepositoBanco", Action = "GridViewPartial_ConciliacionBanco_det" };
+        settings.CallbackRouteValues = new { Controller = "ConciliacionBanco", Action = "GridViewPartial_ConciliacionBanco_det" };
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdPK";
 
@@ -14,18 +14,13 @@
         settings.Settings.ShowGroupPanel = false;
         settings.Settings.ShowFilterRow = true;
         settings.SettingsBehavior.AllowSelectByRowClick = false;
-        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ConciliacionBanco", Action = "EditingDelete", Area = "Banco" };
 
         //Configuración click derecho
         settings.SettingsContextMenu.Enabled = true;
         settings.SettingsBehavior.EnableCustomizationWindow = true;
         settings.SettingsContextMenu.RowMenuItemVisibility.NewRow = false;
         settings.SettingsContextMenu.RowMenuItemVisibility.EditRow = false;
-
-        settings.CommandColumn.Visible = true;
-        settings.CommandColumn.ShowNewButton = false;
-        settings.CommandColumn.ShowEditButton = false;
-        settings.CommandColumn.ShowDeleteButton = true;
+        settings.SettingsContextMenu.RowMenuItemVisibility.DeleteRow = false;
 
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCells;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
@@ -33,42 +28,66 @@
         settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
-        settings.Columns.Add("mcj_IdCbteCble", "ID").Width = Unit.Percentage(10);
-        settings.Columns.Add("cm_observacion", "Observación").Width = Unit.Percentage(20);
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IngEgr";
+            column.Caption = "Tipo";
+            column.Width = Unit.Percentage(20);
+            column.GroupIndex = 0;
+        });
+
+        settings.Columns.Add("tc_TipoCbte", "Tipo Cbte.").Width = Unit.Percentage(15);
+        settings.Columns.Add("IdCbteCble", "ID.").Width = Unit.Percentage(10);
+        settings.Columns.Add("cb_Cheque", "# Cheque").Width = Unit.Percentage(15);
         settings.Columns.Add(column => {
             column.Width = Unit.Percentage(10);
-            column.FieldName = "cm_fecha";
+            column.FieldName = "cb_Fecha";
             column.Caption = "Fecha";
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
         });
         settings.Columns.Add(column =>
         {
             column.Width = Unit.Percentage(40);
-            column.FieldName = "pe_nombreCompleto";
-            column.Caption = "Cliente";
+            column.FieldName = "cb_Observacion";
+            column.Caption = "Observación";
         });
         settings.Columns.Add(column =>
         {
             column.Width = Unit.Percentage(10);
-            column.FieldName = "cr_Valor";
+            column.FieldName = "dc_Valor";
             column.Caption = "Valor";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
         });
-        settings.FillContextMenuItems = (s, e) =>
+        settings.Columns.Add(column =>
         {
-            if (e.MenuType == GridViewContextMenuType.Rows)
+            column.Caption = "*";
+            column.FieldName = "IdPK";
+            column.UnboundType = DevExpress.Data.UnboundColumnType.String;
+            column.SetDataItemTemplateContent(c =>
             {
-                var item = e.CreateItem("Aprobar", "Aprobar");
-                item.BeginGroup = true;
-                item.Image.IconID = DevExpress.Web.ASPxThemes.IconID.ExportExport16x16;
-                e.Items.Insert(e.Items.IndexOfCommand(GridViewContextMenuCommand.Refresh), item);
-
-                item.Items.Add(new GridViewContextMenuItem(GridViewContextMenuCommand.ExportToPdf) { Text = "Export to PDF" });
-                item.Items.Add(GridViewContextMenuCommand.ExportToRtf).Text = "Export to RTF";
-                item.Items.Add(e.CreateItem(GridViewContextMenuCommand.ExportToXls));
-                item.Items.Add("Custom export to XLS(WYSIWYG)", "CustomExportToXLS").Image.IconID = DevExpress.Web.ASPxThemes.IconID.ExportExporttoxls16x16;
-            }
+                Html.DevExpress().Button(settingsBtn =>
+                {
+                    settingsBtn.Name = "btn" + c.KeyValue;
+                    settingsBtn.Text = "Reprobar";
+                    settingsBtn.ClientSideEvents.Click = "function(s, e) {EditingUpdate('" + c.KeyValue + "');}";
+                }).Render();
+            });
+        });
+        settings.Settings.ShowFooter = true;
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor").DisplayFormat = "Total {0:c2}";
+        settings.GroupSummary.Add(DevExpress.Data.SummaryItemType.Sum, "dc_Valor").DisplayFormat = "Total conciliado {0:c2}";
+        settings.PreRender = (sender, e) =>
+        {
+            MVCxGridView gridView = (MVCxGridView)sender;
+            gridView.ExpandAll();
         };
+
+        settings.BeforeGetCallbackResult = (sender, e) =>
+        {
+            MVCxGridView gridView = (MVCxGridView)sender;
+            gridView.ExpandAll();
+        };
+        settings.ClientSideEvents.EndCallback = "function(s,e){ Calcular();}";
     });
 }
 @grid.Bind(Model).GetHtml()
